Add Navigation Drawer Function

--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/menu_pairing"
-        android:title="Pairing Product" />
-    <item
-        android:id="@+id/menu_graph"
-        android:title="Graph" />
-    <item
-        android:id="@+id/menu_report"
-        android:title="Report" />
-    <item
-        android:id="@+id/menu_lock"
-        android:title="Lock App" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/menu_pairing"
+            android:icon="@drawable/ic_product"
+            android:title="Pairing Product" />
+        <item
+            android:id="@+id/menu_graph"
+            android:icon="@drawable/ic_graph"
+            android:title="Graph" />
+        <item
+            android:id="@+id/menu_report"
+            android:icon="@drawable/ic_report"
+            android:title="Report" />
+        <item
+            android:id="@+id/menu_lock"
+            android:icon="@drawable/ic_lock"
+            android:title="Lock App" />
+    </group>
 </menu>
