--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,21 +11,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/home_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimary"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                 app:title="Pairing Product"
                 app:titleTextColor="@android:color/white">
 
             </android.support.v7.widget.Toolbar>
 
-        </RelativeLayout>
+            <FrameLayout
+                android:id="@+id/home_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </FrameLayout>
+
+        </LinearLayout>
 
         <android.support.design.widget.NavigationView
             android:id="@+id/navigasi"
@@ -36,6 +46,26 @@
             app:itemIconTint="@color/colorAccent"
             app:itemTextColor="@color/colorPrimary"
             app:menu="@menu/menu_drawer">
+
+            <LinearLayout
+                android:id="@+id/container_exit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:drawableLeft="@drawable/ic_exit"
+                    android:drawableStart="@drawable/ic_exit"
+                    android:drawablePadding="38dp"
+                    android:textSize="12sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|start"
+                    android:textColor="@color/colorPrimary"
+                    android:text="Exit" />
+            </LinearLayout>
 
         </android.support.design.widget.NavigationView>
 
