--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
     android:padding="10dp">
 
@@ -12,6 +12,6 @@
         android:layout_marginTop="5dp"
         android:text="@string/app_name"
         android:textColor="#fff"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
