delete_some_code

--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -11,10 +11,16 @@
         android:layout_height="wrap_content"
         android:padding="10dp">
 
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/graph"
+            android:layout_width="match_parent"
+            android:layout_height="300dp" />
+
         <TextView
             android:id="@+id/tv_title_frekuensi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/graph"
             android:layout_marginTop="10dp"
             android:text="@string/frekuensi_detak_jantung"
             android:textSize="16sp" />
@@ -81,21 +87,21 @@
             android:src="@drawable/ic_save" />
 
         <TextView
-            android:gravity="center_horizontal"
             android:id="@+id/tv_title_klasifikasi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_bit"
             android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
             android:text="@string/klasifikasi_jantung"
             android:textSize="16sp" />
 
         <TextView
-            android:layout_centerHorizontal="true"
             android:id="@+id/tv_klasifikasi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_title_klasifikasi"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
             android:background="@drawable/bg_text"
             android:paddingLeft="20dp"
@@ -103,6 +109,17 @@
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
             android:text="Normal" />
+
+        <ToggleButton
+            android:id="@+id/tb_stream"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_klasifikasi"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:padding="20dp"
+            android:textOff="Start Stream"
+            android:textOn="Stop Stream" />
 
     </RelativeLayout>
 
