--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,8 @@
                 android:id="@+id/edt_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/username"
-                android:inputType="text" />
+                android:hint="@string/nama_tenaga_medis"
+                android:inputType="textCapWords" />
 
         </android.support.design.widget.TextInputLayout>
 
