--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -11,16 +11,17 @@
         android:id="@+id/pinview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         app:cursorVisible="true"
         app:forceKeyboard="false"
         app:inputType="number"
         app:password="true"
         app:pinHeight="40dp"
-        app:pinLength="6"
-        app:pinWidth="40dp">
+        app:pinLength="8"
+        app:pinWidth="30dp"
+        app:splitWidth="8dp">
 
     </com.goodiebag.pinview.Pinview>
 
