--- a/app/src/main/res/layout/activity_password_lock_screen.xml
+++ b/app/src/main/res/layout/activity_password_lock_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PasswordLockScreenActivity">
+    tools:context=".activity.PasswordLockScreenActivity">
 
     <TextView
         android:layout_width="wrap_content"
