--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/nama_tenaga_medis"
-                android:inputType="textCapWords" />
+                android:inputType="textCapSentences" />
 
         </android.support.design.widget.TextInputLayout>
 
